2009-12-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Support packaging the execution process for later re-play.

	A new parameter `-p' is added to `slr'. It causes all the files
	required to run a program, minus the SL tool chain, to be saved to
	a directory. A copy of this directory is then sufficient to
	"re-play" the execution even without access to the SL tool chain.

	* tools/bin/slr.in: Support new option `-p'. Use timestamped
	`package directory' for temporary files. Link data input files and
	program executable in the package directory. Also print the
	timestamp when `-t' is used.

	* tools/lib/r-host.sh: Rename to...
	* tools/lib/r-host.sh.in: ...here. Save the program command line
	to the package directory.

	* tools/lib/r-mt-sim.sh.in: Save the program command line to the
	package directory.

	* tools/lib/Makefile.am: Also generate `r-host.sh'.

2009-12-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make debugging output more informative.

	* tools/bin/slc.in,
	* tools/bin/slr.in,
	* tools/bin/slt.in,
	* tools/lib/r-mt-sim.sh.in: Use absolute pathnames when printing
	out program names.

2009-12-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug introduced with latest MT-Alpha optimization.

	When adding a `swch' before an potentially dependent instruction,
	the `swch' could become the very first non-directive in the
	assembly output. This is not valid, as it must always be preceded
	by an instruction. Hence, remove any `swch' not preceded by an
	instruction.
	
	* tools/bin/spp (pppalpha.filter2): New stage `rmswchbegin'.

2009-12-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New MT-Alpha optimization.

	The following was observed during Apple-CORE benchmarking: in many
	"small" threads the operation that use the result of a memory load
	directly follow the load. They will arrive at the pipeline read
	stage without their dependency in most case, and then be
	rescheduled. This wastes one execution cycle per thread. It can be